--- a/src/app/modules/clientes/clientes.component.css
+++ b/src/app/modules/clientes/clientes.component.css
@@ -1,4 +1,331 @@
 body {
+    font-family: Arial, sans-serif;
+
+}
+
+h1,
+h3,
+h4,
+p {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.container {
+  margin-top: 50px;
+  height: 50%;
+}
+
+#informacoes {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+canvas {
+  height: 400px;
+}
+
+body {
+  margin-bottom: 80px;
+  /* Adicione margem no final do conteúdo para acomodar o footer */
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #f8f9fa;
+  text-align: center;
+  padding: 10px;
+}
+
+.border-bottom {
+  border-bottom: 2px solid red;
+  /* Altere a cor e espessura conforme desejado */
+}
+
+.filters {
+  margin-top: 20px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.filters {
+  margin-top: 20px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  transition: max-height 0.3s ease;
+  max-height: 500px;
+  overflow: hidden;
+  transition: max-height 0.3s ease;
+  max-height: 500px;
+}
+
+.filters.collapsed {
+  max-height: 0;
+  padding: 0;
+}
+
+.filters label {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.filters .row {
+  margin-bottom: 10px;
+}
+
+.filters .col-2 {
+  margin-bottom: 10px;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f8f9fa;
+  color: #333;
+  margin: 0;
+  padding: 0;
+}
+
+.header {
+  background-color: white;
+  padding: 10px;
+  text-align: center;
+}
+
+.navbar {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: white;
+  padding: 10px;
+  color: #fff;
+  font-family: Arial, sans-serif;
+}
+
+.navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.navbar li {
+  margin-right: 10px;
+}
+
+.navbar li:last-child {
+  margin-right: 0;
+}
+
+.navbar a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 16px;
+  transition: color 0.3s;
+}
+
+.navbar a:hover {
+  color: #ffcc00;
+}
+
+.content {
+  margin-top: 20px;
+  padding-bottom: 100px;
+  min-height: calc(100vh);
+  overflow-y: auto;
+}
+
+table {
+  width: 100%;
+}
+
+th {
+  background-color: #343a40;
+  color: #fff;
+  text-align: center;
+  vertical-align: middle;
+}
+
+td {
+  text-align: center;
+  vertical-align: middle;
+}
+
+.table-striped {
+  margin-top: 20px;
+}
+
+.table-striped tbody tr:nth-of-type(odd) {
+  background-color: #f2f2f2;
+}
+
+.table-striped tbody tr:nth-of-type(even) {
+  background-color: #fff;
+}
+
+.footer {
+  background-color: white;
+  padding: 10px;
+  text-align: center;
+  color: #fff;
+  border-top: 1px solid black;
+}
+
+.footer p {
+  margin: 0;
+  font-size: 14px;
+  margin-top: 30px;
+}
+
+.column-filter label {
+  display: block;
+  margin-bottom: 4px;
+}
+
+.hidden {
+  display: none;
+}
+
+.logout-button {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  padding: 8px 12px;
+  background-color: white;
+  color: black;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.logout-button:hover {
+  background-color: gray;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  font-size: 16px;
+  /* cursor: pointer; */
+  background-color: #831f82;
+  color: white;
+  border-radius: 9px;
+  height: 39px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  border-radius: 5px;
+  overflow: hidden;
+  min-width: 160px;
+  transition: opacity 0.3s ease-in-out;
+  opacity: 0;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  opacity: 1;
+  /* color: #333; */
+}
+
+.dropdown-item {
+  padding: 10px 12px;
+  text-decoration: none;
+  display: block;
+  /* color: blue; */
+  /* transition: background-color 0.2s ease-in-out; */
+}
+
+.dropdown-item:hover {
+  /* background-color: black; */
+}
+
+.dropdown1 {
+  position: relative;
+  display: inline-block;
+  font-size: 16px;
+  color: #333;
+}
+
+.dropdown-content1 {
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  border-radius: 5px;
+  overflow: hidden;
+  width: 150px;
+}
+
+.dropdown1:hover .dropdown-content1 {
+  display: block;
+}
+
+.dropdown-btn1 {
+  border: none;
+  border-radius: 15px;
+  width: 150px;
+  background-color: #831f82;
+  color: white;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.dropdown-item1 {
+  padding: 10px;
+  text-decoration: none;
+  display: block;
+  color: #000;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.dropdown-item1:hover {
+  background-color: #f0f0f0;
+}
+
+/* Adicione estilos à tabela */
+table {
+  border-collapse: collapse;
+  width: 100%;
+  border: 1px solid #dddddd;
+}
+
+th,
+td {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+  color: #000;
+}
+
+/* Estilize o cabeçalho da tabela */
+th {
+  background-color: #f2f2f2;
+}
+
+/* Realce ao passar o mouse nas linhas da tabela */
+tr:hover {
+  background-color: #f5f5f5;
+}
+
+/*******************************************/
+
+body {
   font-family: Arial, sans-serif;
 }
 h1,
@@ -401,4 +728,24 @@ td {
   margin: 0 auto;
   height: 300px;
   background: white;
+}
+
+/***********************************************************************/
+
+.div-main {
+  background-color: white;
+  padding-top: 20px;
+}
+
+.table-control {
+  display: table;
+  width: 80%;
+  margin: 0 auto;
+  height: 300px;
+  background: white;
+}
+
+.th-custom {
+  background-color: #f8f9fa;
+  color: black;
 }
